Updates emoji margin to fix squishing.

--- a/src/styles/less/EmojiPicker.less
+++ b/src/styles/less/EmojiPicker.less
@@ -3,6 +3,6 @@
   background: none;
   border: none;
   padding: 0;
-  margin: 0;
+  margin: 1rem 0;
   line-height: 0;
 }
